worked on deltaNeigbourhood.py tested a lot of random triangles and added list of mistakes fixed/refined methods in Triangle.py

--- a/test_code_drawing.ipynb
+++ b/test_code_drawing.ipynb
@@ -76,8 +76,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9fc48f8",
+   "metadata": {},
+   "source": [
+    "Ideal(-0.754, 0.657) True\n",
+    "Ideal(-0.905, -0.426) True\n",
+    "Ideal(-0.336, -0.942) True\n",
+    "\n",
+    "Ideal(0.945, -0.327) True\n",
+    "Ideal(1.0, -0.011) True\n",
+    "Ideal(0.448, 0.894) True\n",
+    "\n",
+    "Point(0.419, -0.711) False\n",
+    "Ideal(0.944, -0.33) True\n",
+    "Ideal(0.927, -0.376) True\n",
+    "\n",
+    "Point(0.157, -0.283)\n",
+    "Ideal(0.584, -0.812)\n",
+    "Ideal(0.999, 0.034)\n",
+    "\n",
+    "Point(0.821, -0.357)\n",
+    "Ideal(0.87, -0.492)\n",
+    "Ideal(0.828, -0.56)\n",
+    "\n",
+    "Point(-0.141, 0.899)\n",
+    "Point(-0.293, 0.137)\n",
+    "Point(-0.719, 0.363)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 182,
    "id": "a719b7da",
    "metadata": {},
    "outputs": [
@@ -85,23 +115,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "delta 0.4728240966796875\n",
-      "Point(0.332, -0.754) 0 False\n",
-      "Point(-0.784, -0.366) 1 False\n",
-      "Point(-0.417, -0.506) 2 False\n",
-      "Tri is not Ideal\n",
-      "Tri is CCW\n",
-      "Tri is covered\n"
+      "Point(0.74, -0.118)\n",
+      "Point(0.111, 0.045)\n",
+      "Point(0.699, 0.546)\n",
+      "Tri is CW\n",
+      "Tri is covered\n",
+      "delta = 0.7006378173828125\n"
      ]
     },
     {
      "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.1 -1.1 2.2 2.2\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"orange\" stroke-width=\"0.01\" stroke=\"black\" />\n<path d=\"M0.28671474029099764,0.8068774360049068 A0.0772949462807706,0.0772949462807706,0,0,0,0.4017945738589592,0.7233483380935953\" stroke-width=\"0.0015\" stroke=\"black\" fill=\"red\" />\n<path d=\"M0.42049260781729925,0.9072959642646969 A2.2474591560693806,2.2474591560693806,0,0,0,-0.9102564338865368,0.41404495476719116 A2.188504181666642,2.188504181666642,0,0,1,0.4204926078172987,0.9072959642646963 Z\" fill=\"darkorange\" />\n<path d=\"M0.4204926078172996,0.9072959642646972 A0.7519858815035306,0.7519858815035306,0,0,0,-0.9102564338865365,0.4140449547671906 A0.749655798075365,0.749655798075365,0,0,1,0.42049260781729975,0.9072959642646972 Z\" fill=\"blue\" />\n<path d=\"M-0.7830739185498592,0.36823079736341435 A1.0226834922065888,1.0226834922065888,0,0,1,0.3304451202812866,0.7554910917529348 A0.19839460271848888,0.19839460271848888,0,0,1,0.3343904037779576,0.7527356415961273 A0.9922432513869993,0.9922432513869993,0,0,0,-0.784162322872818,0.3646158645274691 A0.14702398190592295,0.14702398190592295,0,0,1,-0.7830739185498594,0.36823079736341435 Z\" />\n<path d=\"M-0.8115679015336226,0.3145323693406044 A0.06087382808974634,0.06087382808974634,0,0,0,-0.7877054064271776,0.42019740213940693\" stroke-width=\"0.0015\" stroke=\"black\" fill=\"red\" />\n<path d=\"M-0.9160284710505999,0.4011132511208025 A0.4024964464134186,0.4024964464134186,0,1,1,-0.3245584655325511,0.9458656365737979 A0.40234329292132676,0.40234329292132676,0,1,0,-0.9160284710506,0.40111325112080265 Z\" fill=\"darkorange\" />\n<path d=\"M-0.9160284710506,0.40111325112080254 A0.6201317271941259,0.6201317271941259,0,0,1,-0.32455846553255097,0.9458656365737979 A0.6267645919012627,0.6267645919012627,0,0,0,-0.9160284710506001,0.40111325112080265 Z\" fill=\"blue\" />\n<path d=\"M-0.41379484395559163,0.5029038986701446 A0.43628424445889963,0.43628424445889963,0,0,0,-0.7838058567621564,0.36454039542184796 A0.1541904159268589,0.1541904159268589,0,0,1,-0.7834299605788146,0.3682968936244826 A0.44206985391104847,0.44206985391104847,0,0,1,-0.42008622014959524,0.5087003008206776 A3.1870791167991395,3.1870791167991395,0,0,1,-0.4137948439555914,0.5029038986701444 Z\" />\n<path d=\"M-0.5001223114428978,0.5852583799938142 A0.13550528328517092,0.13550528328517092,0,0,0,-0.400659129730602,0.6253734402640205\" stroke-width=\"0.0015\" stroke=\"black\" fill=\"red\" />\n<path d=\"M-0.7350232226594319,0.6780419324432254 A0.6008796868199302,0.6008796868199302,0,0,1,0.42702077582702513,0.9042418133508788 A0.6018471807465033,0.6018471807465033,0,0,0,-0.7350232226594319,0.6780419324432254 Z\" fill=\"darkorange\" />\n<path d=\"M-0.7350232226594314,0.678041932443225 A1.2679538196528677,1.2679538196528677,0,0,1,0.42702077582702513,0.9042418133508788 A1.2899430083639642,1.2899430083639642,0,0,0,-0.7350232226594314,0.678041932443225 Z\" fill=\"blue\" />\n<path d=\"M0.33428493550998106,0.7525923517038462 A0.7264885856001612,0.7264885856001612,0,0,0,-0.418025059660059,0.5016593786137038 A0.5398963229119564,0.5398963229119564,0,0,1,-0.41592948858387613,0.5099529793519701 A0.74267369050482,0.74267369050482,0,0,1,0.33055338837378034,0.7556310092692575 A0.2018736636283259,0.2018736636283259,0,0,1,0.33428493550998134,0.7525923517038465 Z\" />\n<circle cx=\"0.3324070507053903\" cy=\"0.7541030500012837\" r=\"0.025\" fill=\"lightgray\" />\n<text x=\"0.3324070507053903\" y=\"0.7541030500012837\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<circle cx=\"-0.78360600735968\" cy=\"0.36642153125490173\" r=\"0.025\" fill=\"lightgray\" />\n<text x=\"-0.78360600735968\" y=\"0.36642153125490173\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<circle cx=\"-0.41695779714754294\" cy=\"0.5058141039697354\" r=\"0.025\" fill=\"lightgray\" />\n<text x=\"-0.41695779714754294\" y=\"0.5058141039697354\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n</svg>",
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.1 -1.1 2.2 2.2\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"orange\" stroke-width=\"0.01\" stroke=\"black\" />\n<path d=\"M0.9864224543038295,0.1642277127807905 A2.095911225956698,2.095911225956698,0,0,0,-0.8896878697974284,-0.456569265649051 A2.065209185965242,2.065209185965242,0,0,1,0.9864224543038291,0.1642277127807905 Z\" fill=\"darkorange\" />\n<path d=\"M0.986422454303828,0.16422771278079762 A1.3667628643071343,1.3667628643071343,0,0,1,-0.8896878697974333,-0.456569265649043 A1.377289420543023,1.377289420543023,0,0,0,0.9864224543038282,0.16422771278079762 Z\" fill=\"blue\" />\n<path d=\"M0.10921953353235603,-0.038332366528152306 A5.854644382821928,5.854644382821928,0,0,0,0.7396452632971222,0.1215196487504544 A0.2924070430150057,0.2924070430150057,0,0,1,0.7409760465703337,0.11508660301466053 A7.101928878329246,7.101928878329246,0,0,1,0.1136627220704316,-0.05243136388902325 A5.318953193957191,5.318953193957191,0,0,0,0.10921953353235736,-0.038332366528151196 Z\" />\n<path d=\"M-0.6746436300346257,0.7381435988029039 A1.8704768409804404,1.8704768409804404,0,0,0,0.788128705331439,-0.6155104741859314 A1.8471678344112765,1.8471678344112765,0,0,1,-0.6746436300346261,0.7381435988029044 Z\" fill=\"darkorange\" />\n<path d=\"M-0.6746436300346045,0.7381435988029244 A1.4825820097036557,1.4825820097036557,0,0,1,0.7881287053314546,-0.6155104741859112 A1.4957515729159498,1.4957515729159498,0,0,0,-0.6746436300346043,0.738143598802923 Z\" fill=\"blue\" />\n<path d=\"M0.6984784884461952,-0.5468453323947129 A10.11884151754097,10.11884151754097,0,0,0,0.10647189161852388,-0.05086536949626552 A4.3602492213127055,4.3602492213127055,0,0,0,0.11640932356302924,-0.03992138067345152 A14.529014662920126,14.529014662920126,0,0,1,0.7004694211851277,-0.5443451972364652 A0.12010784874354004,0.12010784874354004,0,0,1,0.6984784884462041,-0.5468453323947198 Z\" />\n<path d=\"M0.7794488209684365,-0.6264659092807158 A0.4548484692475285,0.4548484692475285,0,1,0,0.9687594811536875,0.24800215256089655 A0.4555293525016271,0.4555293525016271,0,1,1,0.7794488209684367,-0.6264659092807157 Z\" fill=\"darkorange\" />\n<path d=\"M0.7794488209684365,-0.6264659092807152 A1.0210541858855429,1.0210541858855429,0,0,0,0.9687594811536875,0.24800215256089653 A1.0046705785817274,1.0046705785817274,0,0,1,0.7794488209684367,-0.6264659092807161 Z\" fill=\"blue\" />\n<path d=\"M0.7426105999822126,0.1159863517570025 A0.5040465010454317,0.5040465010454317,0,0,1,0.7007266764373612,-0.544611033933855 A0.12372093410266392,0.12372093410266392,0,0,1,0.698213471029794,-0.5465854684418944 A0.49653870619683516,0.49653870619683516,0,0,0,0.737980990601254,0.1206472130639665 A0.3598319360030402,0.3598319360030402,0,0,1,0.7426105999822126,0.11598635175700245 Z\" />\n<circle cx=\"0.7402927589552263\" cy=\"0.11829856540530582\" r=\"0.025\" fill=\"lightgray\" />\n<text x=\"0.7402927589552263\" y=\"0.11829856540530582\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<circle cx=\"0.11143750911298453\" cy=\"-0.04538746835103245\" r=\"0.025\" fill=\"lightgray\" />\n<text x=\"0.11143750911298453\" y=\"-0.04538746835103245\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<circle cx=\"0.6994657052096496\" cy=\"-0.5455885585637359\" r=\"0.025\" fill=\"lightgray\" />\n<text x=\"0.6994657052096496\" y=\"-0.5455885585637359\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n<path d=\"M0.65294393259605,0.2619790490226517 A0.15747825326337658,0.15747825326337658,0,0,0,0.843835761341009,0.045617206619848874\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.843835761341009,0.04561720661984886 A1.0128004837957436,1.0128004837957436,0,0,1,0.7589356346564808,-0.5203254945599014\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.6738051972161868,-0.6095601534313662 A0.07875992530968212,0.07875992530968212,0,0,1,0.758935634656481,-0.5203254945599014\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.6738051972161876,-0.6095601534313573 A1.4891159134914944,1.4891159134914944,0,0,0,-0.10481452329652385,-0.3028257922572881\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.3401858034151463,0.18828985944675963 A0.33232942323134884,0.33232942323134884,0,1,1,-0.1048145232965249,-0.3028257922572894\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.3401858034151455,0.18828985944675902 A1.8587169099738365,1.8587169099738365,0,0,0,0.42288772213491854,0.09494098454934252\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.4228877221349177,0.09494098454934333 A0.455185562196329,0.455185562196329,0,0,0,0.65294393259605,0.2619790490226517\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n</svg>",
       "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x27216a834c0>"
+       "<drawSvg.drawing.Drawing at 0x29bf443dac0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,18 +147,23 @@
     "d.setRenderSize(500)\n",
     "d.append(draw.Circle(0, 0, 1, fill='orange',stroke_width=0.01, stroke='black'))\n",
     "\n",
-    "p1=Point.fromEuclid(0.155, -0.872)\n",
-    "p2=Point.fromEuclid(-0.884, -0.271)\n",
-    "p3=Point.fromEuclid(-0.2, -0.6)\n",
+    "\n",
+    "\n",
+    "p1=Point.fromEuclid(-0.104, 0.069)\n",
+    "p2=Point.fromEuclid(-0.182, 0.212)\n",
+    "p3=Point.fromEuclid(-0.622, -0.316)\n",
     "\n",
     "PList=[p1,p2, p3]\n",
     "PList=randomPoints(3)\n",
-    "\n",
-    "#p1=Ideal(PList[0].theta)\n",
-    "#p2=Ideal(PList[1].theta)\n",
-    "#p3=Ideal(PList[2].theta)\n",
-    "#PList=[p1,p2, p3]\n",
-    "\n",
+    "'''\n",
+    "p1=PList[0]\n",
+    "p2=PList[1]\n",
+    "p3=PList[2]\n",
+    "p1=Ideal(PList[0].theta)\n",
+    "p2=Ideal(PList[1].theta)\n",
+    "p3=Ideal(PList[2].theta)\n",
+    "PList=[p1,p2, p3]\n",
+    "'''\n",
     "#PList=[Ideal.fromDegree(i/3*360) for i in range(2)]\n",
     "#PList=[Ideal(p.theta) for p in PList]\n",
     "\n",
@@ -141,23 +175,28 @@
     "\n",
     "delta = Tri.approx()\n",
     "#delta=0.3\n",
-    "print('delta',delta)\n",
-    "#d.draw(Tri.offsetPolygon(delta), fill='black')\n",
+    "#print(np.ln(1+2**0.5))\n",
     "\n",
+    "#d.draw(Tri, stroke='black', stroke_width=0.01, fill='None')\n",
+    "#d.draw(Tri.offsetPolygon(delta), fill='black')\n",
     "#deltaNeigbourhood(Tri, d, delta, 0)\n",
+    "#d.draw(deltaNbh(Tri,delta,0), stroke='black', stroke_width=0.03, fill='red')\n",
+    "\n",
     "\n",
     "for i,l in enumerate(Tri.edges):\n",
-    "    d.draw(Tri.midCap(i,delta),stroke_width=0.0015, stroke='black',fill='red')\n",
+    "    #d.draw(Tri.midCap(i,delta),stroke_width=0.0015, stroke='black',fill='red')\n",
     "    d.draw(Tri.offsetEdge(i,delta, inner=True), hwidth=0.01, fill='darkorange')\n",
     "    d.draw(Tri.offsetEdge(i,delta, inner=False), hwidth=0.01, fill='blue')\n",
     "    #d.draw(Hypercycle.fromHypercycleOffset(l,delta), hwidth=0.03,fill='yellow')\n",
     "    d.draw(l, hwidth=0.03)\n",
     "\n",
     "for i,v in enumerate(Tri.vertices):\n",
-    "    print(v,i, v.isIdeal())\n",
+    "    print(v)\n",
     "    d.draw(v, radius=0.025, fill='lightgray')\n",
     "    d.draw(draw.Text(str(i), 0.05, *v, center=0.7))\n",
     "\n",
+    "for l in deltaNbh(Tri,delta,0).edges:\n",
+    "    d.draw(l, stroke_width=0.01, stroke='red', fill='none') \n",
     "'''\n",
     "    d.draw(Tri.offsetVertice(i, i, delta, inner=False), radius=0.01, fill='lightblue')\n",
     "    d.draw(Tri.offsetVertice(i, i-1, delta, inner=False), radius=0.01, fill='lightblue')\n",
@@ -165,14 +204,13 @@
     "    d.draw(Tri.offsetVertice(i, i-1, delta, inner=True), radius=0.01, fill='orange')\n",
     "    d.draw(Tri.offsetVertice(i, i, delta, onEdge=True), radius=0.01, fill='lightgreen')\n",
     "    d.draw(Tri.offsetVertice(i, i-1, delta, onEdge=True), radius=0.01, fill='lightgreen')\n",
-    "'''\n",
     "\n",
     "\n",
     "if Tri.isIdeal():\n",
     "    print('Tri is Ideal')\n",
     "else:\n",
     "    print('Tri is not Ideal')\n",
-    "\n",
+    "'''\n",
     "if Tri.isCCW():\n",
     "    print('Tri is CCW')\n",
     "else:\n",
@@ -183,20 +221,9 @@
     "else:\n",
     "    print('Tri is not covered')\n",
     "\n",
-    "d"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5f3b2137",
-   "metadata": {},
-   "source": [
-    "look into these to optimise code:\n",
+    "print('delta =',delta)\n",
     "\n",
-    "0.37420654296875\n",
-    "Point(0.466, 0.378)\n",
-    "Point(-0.045, 0.616)\n",
-    "Point(-0.436, 0.781)"
+    "d"
    ]
   }
  ],
