--- a/test_code_drawing.ipynb
+++ b/test_code_drawing.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 22,
    "id": "a719b7da",
    "metadata": {},
    "outputs": [
@@ -115,22 +115,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Point(0.74, -0.118)\n",
-      "Point(0.111, 0.045)\n",
-      "Point(0.699, 0.546)\n",
-      "Tri is CW\n",
+      "Ideal(-0.912, -0.41)\n",
+      "Point(-0.202, 0.639)\n",
+      "Point(-0.783, -0.147)\n",
+      "Tri is CCW\n",
       "Tri is covered\n",
-      "delta = 0.7006378173828125\n"
+      "0.5999862747431166\n",
+      "0.8813735870195429\n"
      ]
     },
     {
      "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.1 -1.1 2.2 2.2\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"orange\" stroke-width=\"0.01\" stroke=\"black\" />\n<path d=\"M0.9864224543038295,0.1642277127807905 A2.095911225956698,2.095911225956698,0,0,0,-0.8896878697974284,-0.456569265649051 A2.065209185965242,2.065209185965242,0,0,1,0.9864224543038291,0.1642277127807905 Z\" fill=\"darkorange\" />\n<path d=\"M0.986422454303828,0.16422771278079762 A1.3667628643071343,1.3667628643071343,0,0,1,-0.8896878697974333,-0.456569265649043 A1.377289420543023,1.377289420543023,0,0,0,0.9864224543038282,0.16422771278079762 Z\" fill=\"blue\" />\n<path d=\"M0.10921953353235603,-0.038332366528152306 A5.854644382821928,5.854644382821928,0,0,0,0.7396452632971222,0.1215196487504544 A0.2924070430150057,0.2924070430150057,0,0,1,0.7409760465703337,0.11508660301466053 A7.101928878329246,7.101928878329246,0,0,1,0.1136627220704316,-0.05243136388902325 A5.318953193957191,5.318953193957191,0,0,0,0.10921953353235736,-0.038332366528151196 Z\" />\n<path d=\"M-0.6746436300346257,0.7381435988029039 A1.8704768409804404,1.8704768409804404,0,0,0,0.788128705331439,-0.6155104741859314 A1.8471678344112765,1.8471678344112765,0,0,1,-0.6746436300346261,0.7381435988029044 Z\" fill=\"darkorange\" />\n<path d=\"M-0.6746436300346045,0.7381435988029244 A1.4825820097036557,1.4825820097036557,0,0,1,0.7881287053314546,-0.6155104741859112 A1.4957515729159498,1.4957515729159498,0,0,0,-0.6746436300346043,0.738143598802923 Z\" fill=\"blue\" />\n<path d=\"M0.6984784884461952,-0.5468453323947129 A10.11884151754097,10.11884151754097,0,0,0,0.10647189161852388,-0.05086536949626552 A4.3602492213127055,4.3602492213127055,0,0,0,0.11640932356302924,-0.03992138067345152 A14.529014662920126,14.529014662920126,0,0,1,0.7004694211851277,-0.5443451972364652 A0.12010784874354004,0.12010784874354004,0,0,1,0.6984784884462041,-0.5468453323947198 Z\" />\n<path d=\"M0.7794488209684365,-0.6264659092807158 A0.4548484692475285,0.4548484692475285,0,1,0,0.9687594811536875,0.24800215256089655 A0.4555293525016271,0.4555293525016271,0,1,1,0.7794488209684367,-0.6264659092807157 Z\" fill=\"darkorange\" />\n<path d=\"M0.7794488209684365,-0.6264659092807152 A1.0210541858855429,1.0210541858855429,0,0,0,0.9687594811536875,0.24800215256089653 A1.0046705785817274,1.0046705785817274,0,0,1,0.7794488209684367,-0.6264659092807161 Z\" fill=\"blue\" />\n<path d=\"M0.7426105999822126,0.1159863517570025 A0.5040465010454317,0.5040465010454317,0,0,1,0.7007266764373612,-0.544611033933855 A0.12372093410266392,0.12372093410266392,0,0,1,0.698213471029794,-0.5465854684418944 A0.49653870619683516,0.49653870619683516,0,0,0,0.737980990601254,0.1206472130639665 A0.3598319360030402,0.3598319360030402,0,0,1,0.7426105999822126,0.11598635175700245 Z\" />\n<circle cx=\"0.7402927589552263\" cy=\"0.11829856540530582\" r=\"0.025\" fill=\"lightgray\" />\n<text x=\"0.7402927589552263\" y=\"0.11829856540530582\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<circle cx=\"0.11143750911298453\" cy=\"-0.04538746835103245\" r=\"0.025\" fill=\"lightgray\" />\n<text x=\"0.11143750911298453\" y=\"-0.04538746835103245\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<circle cx=\"0.6994657052096496\" cy=\"-0.5455885585637359\" r=\"0.025\" fill=\"lightgray\" />\n<text x=\"0.6994657052096496\" y=\"-0.5455885585637359\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n<path d=\"M0.65294393259605,0.2619790490226517 A0.15747825326337658,0.15747825326337658,0,0,0,0.843835761341009,0.045617206619848874\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.843835761341009,0.04561720661984886 A1.0128004837957436,1.0128004837957436,0,0,1,0.7589356346564808,-0.5203254945599014\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.6738051972161868,-0.6095601534313662 A0.07875992530968212,0.07875992530968212,0,0,1,0.758935634656481,-0.5203254945599014\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.6738051972161876,-0.6095601534313573 A1.4891159134914944,1.4891159134914944,0,0,0,-0.10481452329652385,-0.3028257922572881\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.3401858034151463,0.18828985944675963 A0.33232942323134884,0.33232942323134884,0,1,1,-0.1048145232965249,-0.3028257922572894\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.3401858034151455,0.18828985944675902 A1.8587169099738365,1.8587169099738365,0,0,0,0.42288772213491854,0.09494098454934252\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.4228877221349177,0.09494098454934333 A0.455185562196329,0.455185562196329,0,0,0,0.65294393259605,0.2619790490226517\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n</svg>",
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.1 -1.1 2.2 2.2\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"orange\" stroke-width=\"0.01\" stroke=\"black\" />\n<path d=\"M-0.2070502729129169,-0.6389953438779479 A1.2356170510024376,1.2356170510024376,0,0,1,-0.912287443361761,0.4095505105410824 A1.1774306723730799,1.1774306723730799,0,0,0,-0.19603299683800013,-0.6385240411155908 A0.43795599667675944,0.43795599667675944,0,0,1,-0.20705027291291686,-0.6389953438779479 Z\" />\n<path d=\"M-0.7814364163438936,0.1499104946138935 A0.9727802311297257,0.9727802311297257,0,0,0,-0.19606385100090373,-0.6380846840800769 A0.45243740895771845,0.45243740895771845,0,0,1,-0.20700896412173825,-0.6394293815361098 A1.0121593239684274,1.0121593239684274,0,0,1,-0.7844077151296807,0.14323032679074643 A0.23590090881116776,0.23590090881116776,0,0,1,-0.7814364163438936,0.1499104946138935 Z\" />\n<path d=\"M-0.9122874433617612,0.4095505105410825 A0.22877397923146855,0.22877397923146855,0,0,0,-0.7793149438643925,0.14569535150588794 A4.650545573207807,4.650545573207807,0,0,1,-0.7864269926780394,0.14739382915221544 A0.23088653078135157,0.23088653078135157,0,0,1,-0.9122874433617612,0.4095505105410825 Z\" />\n<circle cx=\"-0.912287443361761\" cy=\"0.4095505105410828\" r=\"0.025\" fill=\"lightgray\" />\n<text x=\"-0.912287443361761\" y=\"0.4095505105410828\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<circle cx=\"-0.20155571549908116\" cy=\"-0.6387255545110547\" r=\"0.025\" fill=\"lightgray\" />\n<text x=\"-0.20155571549908116\" y=\"-0.6387255545110547\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<circle cx=\"-0.7828989226745259\" cy=\"0.14655274372463664\" r=\"0.025\" fill=\"lightgray\" />\n<text x=\"-0.7828989226745259\" y=\"0.14655274372463664\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n<circle cx=\"-0.912287443361761\" cy=\"0.4095505105410828\" r=\"0\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M-0.9122874433617614,0.4095505105410826 A0.31906889543658756,0.31906889543658756,0,0,0,-0.8671757354932066,0.16585264050629464\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M-0.8410911071378294,0.06667061137629061 A0.11255879924650786,0.11255879924650786,0,0,0,-0.8671757354932067,0.1658526405062946\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M-0.8410911071378289,0.06667061137629071 A3.190584483907621,3.190584483907621,0,0,0,-0.34227082071333514,-0.6799583277874073\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M-0.03035043833565587,-0.6504757032670898 A0.1669844357707426,0.1669844357707426,0,0,0,-0.34227082071333537,-0.6799583277874074\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M-0.03035043833565587,-0.6504757032670898 A0.7207197867214988,0.7207197867214988,0,0,1,-0.6530993557888055,0.25126354347619007\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M-0.6530993557888054,0.2512635434761901 A0.23763135039556202,0.23763135039556202,0,0,1,-0.9122874433617609,0.4095505105410824\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n</svg>",
       "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x29bf443dac0>"
+       "<drawSvg.drawing.Drawing at 0x294e0cd68e0>"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,19 +154,15 @@
     "p2=Point.fromEuclid(-0.182, 0.212)\n",
     "p3=Point.fromEuclid(-0.622, -0.316)\n",
     "\n",
+    "\n",
     "PList=[p1,p2, p3]\n",
     "PList=randomPoints(3)\n",
-    "'''\n",
-    "p1=PList[0]\n",
-    "p2=PList[1]\n",
-    "p3=PList[2]\n",
-    "p1=Ideal(PList[0].theta)\n",
-    "p2=Ideal(PList[1].theta)\n",
-    "p3=Ideal(PList[2].theta)\n",
-    "PList=[p1,p2, p3]\n",
-    "'''\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "#PList=[Ideal.fromDegree(i/3*360) for i in range(2)]\n",
-    "#PList=[Ideal(p.theta) for p in PList]\n",
+    "PList=[Ideal(p.theta)if i<1 else p for i,p in enumerate(PList)]\n",
     "\n",
     "#print(PList)\n",
     "\n",
@@ -175,9 +172,9 @@
     "\n",
     "delta = Tri.approx()\n",
     "#delta=0.3\n",
-    "#print(np.ln(1+2**0.5))\n",
     "\n",
-    "#d.draw(Tri, stroke='black', stroke_width=0.01, fill='None')\n",
+    "\n",
+    "#d.draw(Tri, stroke='none', stroke_width=0.01, fill='white')\n",
     "#d.draw(Tri.offsetPolygon(delta), fill='black')\n",
     "#deltaNeigbourhood(Tri, d, delta, 0)\n",
     "#d.draw(deltaNbh(Tri,delta,0), stroke='black', stroke_width=0.03, fill='red')\n",
@@ -185,10 +182,10 @@
     "\n",
     "for i,l in enumerate(Tri.edges):\n",
     "    #d.draw(Tri.midCap(i,delta),stroke_width=0.0015, stroke='black',fill='red')\n",
-    "    d.draw(Tri.offsetEdge(i,delta, inner=True), hwidth=0.01, fill='darkorange')\n",
-    "    d.draw(Tri.offsetEdge(i,delta, inner=False), hwidth=0.01, fill='blue')\n",
+    "    #d.draw(Tri.offsetEdge(i,delta, inner=True), hwidth=0.01, fill='darkorange')\n",
+    "    #d.draw(Tri.offsetEdge(i,delta, inner=False), hwidth=0.01, fill='blue')\n",
     "    #d.draw(Hypercycle.fromHypercycleOffset(l,delta), hwidth=0.03,fill='yellow')\n",
-    "    d.draw(l, hwidth=0.03)\n",
+    "    d.draw(l, hwidth=0.04)\n",
     "\n",
     "for i,v in enumerate(Tri.vertices):\n",
     "    print(v)\n",
@@ -196,7 +193,10 @@
     "    d.draw(draw.Text(str(i), 0.05, *v, center=0.7))\n",
     "\n",
     "for l in deltaNbh(Tri,delta,0).edges:\n",
-    "    d.draw(l, stroke_width=0.01, stroke='red', fill='none') \n",
+    "    d.draw(l, stroke_width=0.01, stroke='red', fill='none')\n",
+    "\n",
+    "#d.draw(Tri, fill='white')\n",
+    "#d.draw(deltaNbh(Tri,delta,0), stroke='none', fill='red')\n",
     "'''\n",
     "    d.draw(Tri.offsetVertice(i, i, delta, inner=False), radius=0.01, fill='lightblue')\n",
     "    d.draw(Tri.offsetVertice(i, i-1, delta, inner=False), radius=0.01, fill='lightblue')\n",
@@ -204,7 +204,6 @@
     "    d.draw(Tri.offsetVertice(i, i-1, delta, inner=True), radius=0.01, fill='orange')\n",
     "    d.draw(Tri.offsetVertice(i, i, delta, onEdge=True), radius=0.01, fill='lightgreen')\n",
     "    d.draw(Tri.offsetVertice(i, i-1, delta, onEdge=True), radius=0.01, fill='lightgreen')\n",
-    "\n",
     "\n",
     "if Tri.isIdeal():\n",
     "    print('Tri is Ideal')\n",
@@ -221,7 +220,8 @@
     "else:\n",
     "    print('Tri is not covered')\n",
     "\n",
-    "print('delta =',delta)\n",
+    "print(delta)\n",
+    "print(np.log(1+2**0.5))\n",
     "\n",
     "d"
    ]
